test/invalid/TestInvalidObject/Child.plume

/**
 * Classe que sera sub-class de outra de forma a testar alguns aspetos
 * de hierarquia
 *
 * Esta classe nao tem problemas, mas existe um teste que a usa de forma 
 * incorreta
 * @author 37029, Juliana Franco
 *
 */
class Child extends Parent is
	
  	method override getHello : () -> String is
  		"Hello World"
  		